# c-compiler-rust

./: .gitignore  Cargo.toml  README.md  double_pi.s  gcc.S  ne_true.s  return_2  return_2.s  tab  tab.c  test  test.c  test.s  test_manual.s
fixtures/: array_operations.c  control_flow.c  double_compare.c  static_initializers.c
manual_tests/: addition.S  addition_client.S  arithmetic_ops.S  declarators.c  double_literal_constant.S  double_literal_constant.c  double_negation.S  double_negation.c  double_pi.S  double_pi.c  hello_world.S  hello_world.c  logical.S  nan.S  static_recursive_call.S  static_variables_in_expressions.S  type_before_storage_class.S  vars.S  vars.c
src/: asm.rs  ast.rs  const_eval.rs  emitter.rs  lexer.rs  main.rs  parser.rs  semantic_analysis.rs  symbol_table.rs  tacky.rs  types.rs
src/snapshots/: c_compiler_rust__asm__tests__double_and_int_parameters_fixture_codegens.snap  c_compiler_rust__emitter__tests__comparisons_fixture_emits.snap  c_compiler_rust__emitter__tests__comparisons_fixture_emits.snap.new  c_compiler_rust__emitter__tests__double_greater_than_emits_comisd_and_seta.snap  c_compiler_rust__emitter__tests__double_greater_than_emits_comisd_and_seta.snap.new  c_compiler_rust__parser__tests__array_operations_fixture_parses.snap  c_compiler_rust__parser__tests__control_flow_fixture_parses.snap  c_compiler_rust__semantic_analysis__tests__static_initializers_symbol_table.snap  c_compiler_rust__semantic_analysis__tests__static_initializers_typed_ast.snap
